imessage app ui updates for iOS 13 Dark Mode

--- a/SendTrack-Message-Extension/UI/Base.lproj/MainInterface.storyboard
+++ b/SendTrack-Message-Extension/UI/Base.lproj/MainInterface.storyboard
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ObA-dk-sSI">
-    <device id="ipad11_0rounded" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14865.1" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ObA-dk-sSI">
+    <device id="retina6_5" orientation="portrait" appearance="dark"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14819.2"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -32,11 +31,11 @@
             <objects>
                 <viewController storyboardIdentifier="SongMessageExtensionViewController" id="3Vm-f3-sdv" customClass="SongMessageExtensionViewController" customModule="SendTrack_Message_Extension" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="PWz-gS-2fK">
-                        <rect key="frame" x="0.0" y="0.0" width="834" height="1194"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <searchBar contentMode="redraw" fixedFrame="YES" placeholder="Search for a Song..." translatesAutoresizingMaskIntoConstraints="NO" id="yAc-ij-8ql">
-                                <rect key="frame" x="0.0" y="0.0" width="834" height="56"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
@@ -44,9 +43,9 @@
                                 </connections>
                             </searchBar>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="1ZL-R0-TqQ">
-                                <rect key="frame" x="0.0" y="56" width="834" height="1138"/>
+                                <rect key="frame" x="0.0" y="56" width="414" height="840"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" name="AppBackground"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="gy0-qt-IRs">
                                     <size key="itemSize" width="115" height="160"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -65,26 +64,26 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="115" height="160"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mNB-uy-jlb">
-                                                            <rect key="frame" x="1.5" y="0.0" width="112" height="112"/>
+                                                            <rect key="frame" x="1.6666666666666643" y="0.0" width="112" height="112"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" secondItem="mNB-uy-jlb" secondAttribute="height" multiplier="1:1" id="0Fr-eR-tIQ"/>
                                                             </constraints>
                                                         </imageView>
                                                         <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="qeJ-cX-eOE">
-                                                            <rect key="frame" x="47.5" y="46" width="20" height="20"/>
+                                                            <rect key="frame" x="47.666666666666664" y="46" width="19.999999999999993" height="20"/>
                                                         </activityIndicatorView>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gf2-xV-qP2">
-                                                            <rect key="frame" x="76" y="74.5" width="33.5" height="33.5"/>
+                                                            <rect key="frame" x="76" y="74.333333333333329" width="33.666666666666657" height="33.666666666666671"/>
                                                             <subviews>
                                                                 <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ppv-FB-eag">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="33.5" height="33.5"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="33.666666666666664" height="33.666666666666664"/>
                                                                     <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                     <connections>
                                                                         <action selector="playPauseButtonTapped:" destination="pnV-MR-jhO" eventType="touchUpInside" id="xf5-xe-YhQ"/>
                                                                     </connections>
                                                                 </button>
                                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="playSquare" translatesAutoresizingMaskIntoConstraints="NO" id="6QA-h6-LVq">
-                                                                    <rect key="frame" x="7.5" y="7.5" width="18.5" height="18.5"/>
+                                                                    <rect key="frame" x="7.3333333333333304" y="7.3333333333333428" width="18.666666666666671" height="19"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="width" secondItem="6QA-h6-LVq" secondAttribute="height" multiplier="1:1" id="TYO-gp-UXq"/>
                                                                     </constraints>
@@ -108,16 +107,16 @@
                                                             </constraints>
                                                         </view>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(song name label is two lines)" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wk7-MV-x3j">
-                                                            <rect key="frame" x="1.5" y="115" width="112" height="42"/>
+                                                            <rect key="frame" x="1.6666666666666643" y="115" width="112" height="42"/>
                                                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="11"/>
-                                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                             <variation key="widthClass=regular">
                                                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="19"/>
                                                             </variation>
                                                         </label>
                                                     </subviews>
-                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <color key="backgroundColor" name="AppBackground"/>
                                                     <constraints>
                                                         <constraint firstItem="wk7-MV-x3j" firstAttribute="width" secondItem="mNB-uy-jlb" secondAttribute="width" id="16N-0W-ODs"/>
                                                         <constraint firstItem="wk7-MV-x3j" firstAttribute="top" secondItem="mNB-uy-jlb" secondAttribute="bottom" constant="3" id="4YZ-ks-8Pv"/>
@@ -136,6 +135,7 @@
                                                 </view>
                                             </subviews>
                                         </view>
+                                        <color key="backgroundColor" name="AppBackground"/>
                                         <constraints>
                                             <constraint firstItem="Mg6-aN-AbE" firstAttribute="height" secondItem="pnV-MR-jhO" secondAttribute="height" id="ChR-PW-iPL"/>
                                             <constraint firstItem="Mg6-aN-AbE" firstAttribute="centerY" secondItem="pnV-MR-jhO" secondAttribute="centerY" id="EQo-Pm-rIj"/>
@@ -158,7 +158,7 @@
                                 </connections>
                             </collectionView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" name="AppBackground"/>
                         <viewLayoutGuide key="safeArea" id="v26-2v-H51"/>
                     </view>
                     <connections>
@@ -173,5 +173,8 @@
     </scenes>
     <resources>
         <image name="playSquare" width="816" height="816"/>
+        <namedColor name="AppBackground">
+            <color red="0.37099999189376831" green="0.37099999189376831" blue="0.37099999189376831" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
